name:                MASMGen
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             LGPL-3
license-file:        LICENSE
author:              petercommand
maintainer:          petercommand@gmail.com
copyright:           2016 petercommand
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable MASMGen
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , containers >=0.5
                     , mtl >=2.2
                     , word8
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/AsmTest
